Update PeptideShaker and SearchGUI to 0.38 and 1.27 respectively Change README.md to README.rst for compatibility with toolshed Change shed.yml to testtoolshed info Remove redundant decoy option for MS-GF in SearchGUI Make search GUI basic defaults align with advanced defaults